# ChronoManager

./: .gitignore  README.md  __main__.py  pyproject.toml
front/: client.py
src/: main.py
src/api/: events.py  routers.py  users.py
src/app/models/: events.py
src/config/: .env-example  settings.py
src/models/: events.py  users.py
src/repositories/: events.py  users.py
src/schemas/: events.py  users.py
src/services/: events.py  users.py
src/storages/database/: __init__.py
src/utils/: repository.py  unitofwork.py
src/utils/scripts/: create_tables.sql
